2013-08-22  Filip Pizlo  <fpizlo@apple.com>

        build-jsc --ftl-jit should work
        https://bugs.webkit.org/show_bug.cgi?id=120194

        Reviewed by Oliver Hunt.

        * Scripts/build-jsc: Need to pass the feature flag to xcodebuild

2013-08-23  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r153534.
        http://trac.webkit.org/changeset/153534
        https://bugs.webkit.org/show_bug.cgi?id=120216

        Too many tests failing just WinEWS bots (Requested by rfong on
        #webkit).

        * Scripts/webkitpy/common/config/ews.json:

2013-08-23  Alex Christensen  <alex.christensen@flexsim.com>

        Unreviewed.  Added my webkit.org email address.

        * Scripts/webkitpy/common/config/contributors.json:

2013-08-23  Peter Gal  <galpeter@inf.u-szeged.hu>

        [WTR] Should dump as text when the mimetype is text/plain
        https://bugs.webkit.org/show_bug.cgi?id=118306

        Reviewed by Christophe Dumez.

        Check for the text/plain mimetype and if true then mark it as
        text dump.

        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::InjectedBundlePage::dump):

2013-08-22  Filip Pizlo  <fpizlo@apple.com>

        Update LLVM binary drops and scripts to the latest version from SVN
        https://bugs.webkit.org/show_bug.cgi?id=120184

        Reviewed by Mark Hahnenberg.

        * ReducedFTL/build.sh:
        * Scripts/configure-llvm: Added.
        * Scripts/copy-webkitlibraries-to-product-directory:
        * Scripts/export-llvm-build:

2013-08-22  Andy Estes  <aestes@apple.com>

        <https://webkit.org/b/120180> Fix issues with OTHER_LDFLAGS in various .xcconfig files

        Reviewed by David Kilzer.

        * TestWebKitAPI/Configurations/Base.xcconfig: Removed the definition of
        OTHER_CPLUSPLUSFLAGS since -ftemplate-depth=256 is already set in
        DebugRelease.xcconfig and TestWebKitAPI isn't built in Production.
