@@ -1,3 +1,12 @@
+2013-08-23  Thiago de Barros Lacerda  <thiago.lacerda@openbossa.org>
+
+        Move TestWebKitAPI_LIBRARIES before platform specific cmake include
+        https://bugs.webkit.org/show_bug.cgi?id=120220
+
+        Reviewed by Martin Robinson.
+
+        * TestWebKitAPI/CMakeLists.txt:
+
 2013-08-22  Filip Pizlo  <fpizlo@apple.com>
 
         build-jsc --ftl-jit should work
